# o3zy-migrate

./: .gitignore  Cargo.toml
assets/device_json/: o3zy20g.json  o3zy40g+uv.json  o3zy40g.json  o3zy60g+uv.json  o3zy60g.json  o3zycar.json
src/: device_json.rs  main.rs  util.rs  wifi.rs  wifi_parse.rs
