[package]
name = "o3zy-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
const_format = "0.2.26"
dialoguer = "0.10.2"
itertools = "0.10.4"
log = "0.4.17"
nom = "7.1.1"
online = { version = "3.0.2", default-features = false, features = ["sync"] }
simple_logger = "2.3.0"

