[package]
name = "o3zy-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
const_format = { version = "0.2.26", features = ["const_generics"] }
dialoguer = "0.10.2"
itertools = "0.10.4"
log = "0.4.17"
nom = "7.1.1"
online = { version = "3.0.2", default-features = false, features = ["sync"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
simple_logger = "2.3.0"

